Fix Scroll on mobile

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ img {
 /* Styles */
 .card {
   .card__wrapper {
-    min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
